# qfaktury

./: .clang-format  .gitignore  CMakeLists.txt  README.md  cyg_profile_func.cpp  qfaktury.pro  qfaktury_en.ts  qfaktury_pl.ts
.github/workflows/: ccpp.yml
src/: Faktura.cpp  FakturaBrutto.cpp  Invoice.cpp  Kontrahenci.cpp  Korekta.cpp  KorektaBrutto.cpp  MainWindow.cpp  MainWindow.h  Settings.h  TowaryBruttoLista.cpp  TowaryLista.cpp  TowaryLista.h  Ustawienia.cpp  Uzytkownik.cpp  backup.cpp  backup.h  bill.cpp  bill.h  buyerdata.cpp  buyerdata.h  buyers.cpp  buyers.h  buyerslist.cpp  buyerslist.h  changeamount.cpp  changeamount.h  config.h  const.h  convertamount.cpp  convertamount.h  correctgross.cpp  correctgross.h  correction.cpp  correction.h  csvexport.cpp  csvexport.h  custompaymdata.cpp  custompaymdata.h  custompayment.cpp  custompayment.h  (+58 more)
src/GusApi/: getFromNip.php
src/SimpleSmtp_SSL_QT5/smtp_attachements/: emailwindow.cpp  emailwindow.h  smtp.cpp  smtp.h
ui/: MainWindow.ui  TowaryLista.ui  Ustawienia.ui  buyers.ui  buyerslist.ui  changeamount.ui  goods.ui  goodslist.ui  invoice.ui  mainwindow.ui  setting.ui  user.ui
